--- a/src/add.html
+++ b/src/add.html
@@ -40,6 +40,7 @@
             <br>
             <input type="submit" id="submit" value="Lägg till">
         </form>
+        <div id="message"></div>
     </main>
     <footer>
         <p>Laborationsuppgift för kursen DT207G, Back-endbaserad webbutveckling</p>
