--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,28 @@
     <main>
         <h2>Befintliga arbetserfarenheter</h2>
         <div id="workexperiences">
-
         </div>
+        <form action="" id="changeForm">
+            <label for="changeCompanyname">Arbetsplats:</label>
+            <input type="text" name="changeCompanyname" id="changeCompanyname">
+            <br>
+            <label for="changeLocation">Plats:</label>
+            <input type="text" name="changeLocation" id="changeLocation">
+            <br>
+            <label for="changeJobtitle">Arbetstitel:</label>
+            <input type="text" name="changeJobtitle" id="changeJobtitle">
+            <br>
+            <label for="changeStartdate">Från:</label>
+            <input type="date" name="changeStartdate" id="changeStartdate">
+            <br>
+            <label for="changeEnddate">Till:</label>
+            <input type="date" name="changeEnddate" id="changeEnddate">
+            <br>
+            <label for="changeDescription">Arbetsbeskrivning:</label>
+            <textarea name="changeDescription" id="changeDescription" cols="30" rows="6"></textarea>
+            <br>
+            <input type="submit" id="submit" value="Spara ändring">
+        </form>
     </main>
     <footer>
         <p>Laborationsuppgift för kursen DT207G, Back-endbaserad webbutveckling</p>
