--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lägg till</title>
+    <title>Om uppgiften</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -12,12 +16,34 @@
             <ul>
                 <li><a href="index.html">Arbetserfarenheter</a></li>
                 <li><a href="add.html">Lägg till</a></li>
-                <li><a href="about.html">Om uppgiften</a></li>
+                <li class="active"><a href="about.html">Om</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Om uppgiften</h2>
+        <article>
+            <h3>Om webbplatsen</h3>
+            <p>
+                På denna webbplats visas arbetserfarenheter som hämtas med fetch-anrop från ett API.
+                Dessa kan även ändras eller raderas med knapparna som tillhör vardera arbetserfarenhet.
+                Under länken "Lägg till" kan användaren lägga till fler arbetserfarenheter.
+                <br>
+                Dessa data som hämtas och skickas till API'et lagras i en PostgreSQL-databas, 
+                denna är publicerad till web-hosten <a href="https://render.com/">Render</a>.
+            </p>
+        </article>
+        <article>
+            <h3>Slutsatser om uppgiften</h3>
+            <p>
+                En rolig och lärorik uppgift där många nya kunskaper använts, 
+                men även de kunskaper vi fått från tidigare uppgifter har satts på prov.
+                Det som egentligen kändes som mitt största bekymmer i uppgiften var att koppla upp API'et mot en databas.
+                <br>
+                Jag hade tänkt testa en annan web-host för att publicera databasen och API'et, 
+                men de flesta hade väldigt skral dokumentation om hur man faktiskt ansluter sig mot databasen.
+            </p>
+        </article>
     </main>
     <footer>
         <p>Laborationsuppgift för kursen DT207G, Back-endbaserad webbutveckling</p>
