--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbetserfarenheter</title>
     <script src="js/main.js" type="module"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -51,6 +51,7 @@
             <textarea name="changeDescription" id="changeDescription" cols="30" rows="6"></textarea>
             <br>
             <input type="submit" id="submit" value="Spara ändring">
+            <div id="message"></div>
         </form>
     </main>
     <footer>
